<resources>
    <string name="app_name">Weather forecast</string>
    <string name="today">Today</string>
    <string name="_5_days">5 days</string>
    <string name="wind">Wind</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="humidity">Humidity</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="feels_like">Feels like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_days_forecast">Next days forecast</string>
    <string name="search_your_city">Search your city</string>
    <string name="check_your_connection">Check your connection!</string>
    <string name="get_your_location">Get your location</string>
    <string name="the_device_is_offline">The device is offline!</string>
    <string name="please_search_the_city_that_you_want">Please search the city that you want!</string>
</resources>