<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker">

    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">
            <!--City-->
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_20mdp"
                android:drawablePadding="@dimen/_5mdp"
                android:textColor="@color/whiteSmoke"
                android:textSize="@dimen/_18font_mdp"
                app:drawableTint="@color/whiteSmoke"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Tehran" />
            <!--Last update-->
            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteAlpha"
                android:textSize="@dimen/_10font_mdp"
                app:layout_constraintStart_toStartOf="@id/tvCity"
                app:layout_constraintTop_toBottomOf="@id/tvCity"
                tools:text="Monday 24 July 21:06" />
            <!--5Day-->
            <TextView
                android:id="@+id/tv5day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:layout_marginEnd="@dimen/_16mdp"
                android:drawablePadding="@dimen/_3mdp"
                android:gravity="center_vertical"
                android:text="@string/_5_days"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11font_mdp"
                app:drawableEndCompat="@drawable/arrow"
                app:drawableTint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastUpdate" />
            <!--Chip 5 day-->
            <HorizontalScrollView
                android:id="@+id/scroll6days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14mdp"
                android:clipToPadding="false"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/tv5day">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <!--Cache-->
                    <TextView
                        android:id="@+id/tvCache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/the_device_is_offline"
                        android:textColor="@color/magentaHaze"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_16mdp"
                        android:paddingEnd="@dimen/_20mdp"
                        android:visibility="invisible"
                        app:chipSpacing="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/firstDay"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5mdp"
                            android:padding="@dimen/_3mdp"
                            android:textColor="@color/gray"
                            tools:text="sun, 14 jul" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/secondDay"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5mdp"
                            android:padding="@dimen/_3mdp"
                            android:textColor="@color/gray"
                            tools:text="sun, 14 jul" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/thirdDay"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_5mdp"
                            android:padding="@dimen/_3mdp"
                            android:textColor="@color/gray"
                            tools:text="sun, 14 jul" />

                    </com.google.android.material.chip.ChipGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>
            <!--Card main-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardMain"
                android:layout_width="0dp"
                android:layout_height="@dimen/_170mdp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_35mdp"
                android:elevation="@dimen/_3mdp"
                app:cardBackgroundColor="@color/dark"
                app:cardCornerRadius="@dimen/_10mdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scroll6days">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--Temperature-->
                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16mdp"
                        android:textColor="@color/whiteSmoke"
                        android:textSize="@dimen/_52font_mdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/animForecast"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="18" />
                    <!--Anim-->
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animForecast"
                        android:layout_width="@dimen/_80mdp"
                        android:layout_height="@dimen/_85mdp"
                        app:layout_constraintBottom_toBottomOf="@id/tvTemp"
                        app:layout_constraintEnd_toStartOf="@+id/tvTemp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tvTemp"
                        app:lottie_autoPlay="true"
                        app:lottie_speed="0.8" />
                    <!--Wind info-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5mdp"
                        android:elevation="@dimen/_5mdp"
                        app:cardBackgroundColor="@color/darker"
                        app:cardCornerRadius="@dimen/_8mdp"
                        app:layout_constraintEnd_toStartOf="@+id/cardView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/animForecast">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_10mdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/wind"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/_7font_mdp"
                                app:drawableTopCompat="@drawable/wind" />

                            <TextView
                                android:id="@+id/tvWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/whiteSmoke"
                                android:textSize="@dimen/_10font_mdp"
                                tools:text="15 Km/h" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <!--Humidity info-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5mdp"
                        android:elevation="@dimen/_5mdp"
                        app:cardBackgroundColor="@color/darker"
                        app:cardCornerRadius="@dimen/_8mdp"
                        app:layout_constraintEnd_toStartOf="@+id/cardView3"
                        app:layout_constraintStart_toEndOf="@+id/cardView2"
                        app:layout_constraintTop_toBottomOf="@id/animForecast">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_10mdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/humidity"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/_7font_mdp"
                                app:drawableTopCompat="@drawable/humidity" />

                            <TextView
                                android:id="@+id/tvHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/whiteSmoke"
                                android:textSize="@dimen/_10font_mdp"
                                tools:text="24 %" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <!--Feels like info-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5mdp"
                        android:elevation="@dimen/_5mdp"
                        app:cardBackgroundColor="@color/darker"
                        app:cardCornerRadius="@dimen/_8mdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardView"
                        app:layout_constraintTop_toBottomOf="@id/animForecast">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/_10mdp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/feels_like"
                                android:textColor="@color/gray"
                                android:textSize="@dimen/_7font_mdp"
                                app:drawableTopCompat="@drawable/feels_like" />

                            <TextView
                                android:id="@+id/tvFeelsLike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/whiteSmoke"
                                android:textSize="@dimen/_10font_mdp"
                                tools:text="99 " />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <!--Forecast hourly list-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvForecastHourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35mdp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_16mdp"
                android:paddingEnd="@dimen/_20mdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardMain"
                tools:listitem="@layout/item_forecast_hourly" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--Loading-->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/_32mdp"
        android:layout_height="@dimen/_32mdp"
        android:indeterminateTint="@color/magentaHaze"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Go to search page-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/magentaHaze"
        android:gravity="center"
        android:id="@+id/tvGoToSearch"
        android:visibility="gone"
        android:textSize="@dimen/_12font_mdp"
        android:text="@string/please_search_the_city_that_you_want"/>

    <!--Network checker-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/checkNetLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/connection_error" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>